[package]
name = "test_fritzbox_aha"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
reqwest = { version = "0.11.20", features = ["blocking", "rustls-tls"] }
rpassword = "7.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde-xml-rs = "0.6.0"
sha2 = "0.10.7"
